Fix horizontal scroll

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -8,6 +8,10 @@
 @body_font: 'Lora';
 @sans_font: 'Museo Sans';
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     background: white;
     color: @gray;
